Improve map rendering and use plugins dynamically
